@@ -93,6 +93,20 @@ The recipe supports the following options:
 
   Username for SMTP server.
 
+``trac-ini-additional``
+
+  In case a Trac parameter is not natively supported by this recipe, you can
+  use this to add your own. The syntax must respect the following scheme:
+  ``section|parameter|value``. You can add several custom parameters, one per
+  line. Example::
+
+    trac-ini-additional = attachment|max_size|52428800
+                          notification|always_notify_owner|true
+                          logging|log_level|DEBUG
+
+  To know more about all the ``trac.ini`` parameters, see:
+  http://trac.edgewall.org/wiki/0.11/TracIni
+
 
 Example usage
 =============
