@@ -20,6 +20,9 @@
 - Add support for all SMTP parameters.
   [kdeldycke]
 
+- Add support for trac.ini custom parameters.
+  [kdeldycke]
+
 
 0.2.3 (2010-04-24)
 ==================
